--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^2.0.13"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "mongodb": "^4.1.3",
-    "pug": "^2.0.3"
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.2.17",
+    "mysql2": "^1.6.1",
+    "pug": "^3.0.2",
+    "sequelize": "^5.0.0-beta.11"
   }
 }
